[gd_scene load_steps=20 format=3 uid="uid://cd3rf4ak40udi"]

[ext_resource type="PackedScene" uid="uid://cmitvwiv8v3ea" path="res://models/player.glb" id="1_i0mlj"]
[ext_resource type="Script" path="res://scripts/misc/Healthbar.gd" id="2_3ogie"]
[ext_resource type="Script" path="res://scripts/abilities/AbilityVisuals.gd" id="2_kcsc8"]
[ext_resource type="Script" path="res://scripts/misc/HealthbarProgress.gd" id="4_5cq1x"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pq13g"]
albedo_color = Color(0.647059, 0.647059, 0.647059, 1)
metallic = 0.7

[sub_resource type="BoxMesh" id="BoxMesh_uyk4q"]
material = SubResource("StandardMaterial3D_pq13g")
size = Vector3(0.5, 0.1, 0.7)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dxmtf"]
albedo_color = Color(0.592157, 0.345098, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_uxapo"]
material = SubResource("StandardMaterial3D_dxmtf")
size = Vector3(0.7, 0.1, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_28qki"]
albedo_color = Color(0.647059, 0.647059, 0.647059, 1)
metallic = 0.7

[sub_resource type="PrismMesh" id="PrismMesh_f6v0p"]
material = SubResource("StandardMaterial3D_28qki")
size = Vector3(0.5, 0.2, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bqa5o"]
albedo_color = Color(0.592157, 0.345098, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_a4y3i"]
material = SubResource("StandardMaterial3D_bqa5o")
size = Vector3(0.1, 0.1, 0.3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6km20"]
transparency = 1
albedo_color = Color(0, 0.686275, 0.258824, 0.592157)
grow_amount = 0.5

[sub_resource type="SphereMesh" id="SphereMesh_018oq"]
material = SubResource("StandardMaterial3D_6km20")
radius = 2.5
height = 5.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_o705k"]
transparency = 1
albedo_color = Color(0.819608, 0, 0.145098, 0.592157)

[sub_resource type="SphereMesh" id="SphereMesh_gommd"]
material = SubResource("StandardMaterial3D_o705k")
radius = 2.5
height = 5.0

[sub_resource type="ViewportTexture" id="ViewportTexture_5q887"]
viewport_path = NodePath("AbilityVisuals/Effects/SubViewport")

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_wr625"]
properties/0/path = NodePath("TextureProgressBar:value")
properties/0/spawn = true
properties/0/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_kt7jr"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="Main" type="Node3D"]

[node name="body" parent="." instance=ExtResource("1_i0mlj")]
transform = Transform3D(-0.15, 0, -2.26494e-08, 0, 0.15, 0, 2.26494e-08, 0, -0.15, 0, -0.726, 0)

[node name="AbilityVisuals" type="Node3D" parent="."]
script = ExtResource("2_kcsc8")

[node name="Sword" type="Node3D" parent="AbilityVisuals"]
transform = Transform3D(0.912998, 0.407964, 0, -0.39847, 0.891751, -0.21448, -0.0875, 0.195819, 0.976728, -0.198729, 0.205376, -1.49376)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="AbilityVisuals/Sword"]
transform = Transform3D(1, 2.23517e-08, 0, 5.58794e-09, 1, 0, 0, 0, 1, 2.98023e-08, 1, 0.148)
mesh = SubResource("BoxMesh_uyk4q")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="AbilityVisuals/Sword"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.546)
mesh = SubResource("BoxMesh_uxapo")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="AbilityVisuals/Sword"]
transform = Transform3D(1, 0, 0, 0, 0.0177491, 0.999843, 0, -0.999843, 0.0177491, -0.001, 1, -0.303)
mesh = SubResource("PrismMesh_f6v0p")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="AbilityVisuals/Sword"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.746259)
mesh = SubResource("BoxMesh_a4y3i")

[node name="Heal" type="MeshInstance3D" parent="AbilityVisuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
visible = false
mesh = SubResource("SphereMesh_018oq")

[node name="DamageBuff" type="MeshInstance3D" parent="AbilityVisuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
visible = false
mesh = SubResource("SphereMesh_gommd")

[node name="Effects" type="Sprite3D" parent="AbilityVisuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.75847, 0)
billboard = 1
texture = SubResource("ViewportTexture_5q887")

[node name="SubViewport" type="SubViewport" parent="AbilityVisuals/Effects"]
transparent_bg = true

[node name="HBoxContainer" type="HBoxContainer" parent="AbilityVisuals/Effects/SubViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Healthbar" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2634, 0)
billboard = 1
script = ExtResource("2_3ogie")

[node name="SubViewport" type="SubViewport" parent="Healthbar"]
size = Vector2i(200, 26)

[node name="TextureProgressBar" type="TextureProgressBar" parent="Healthbar/SubViewport"]
offset_right = 40.0
offset_bottom = 40.0
value = 100.0
script = ExtResource("4_5cq1x")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="Healthbar/SubViewport"]
replication_config = SubResource("SceneReplicationConfig_wr625")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_kt7jr")

[connection signal="value_changed" from="Healthbar/SubViewport/TextureProgressBar" to="Healthbar/SubViewport/TextureProgressBar" method="_on_value_changed"]
